--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
       </div>
     </div>
   </div>
+
+  <h4 style="text-align: center">made with love<i class="fa-solid fa-heart"></i></h4>
 </div>
 </body>
 </html>
